# RedDemonScript

./: .gitignore  AGENTS.md  CMakeLists.txt  Main.qml  main.cpp  qtquickcontrols2.conf
.iflow/commands/: bmad-agent-bmad-master.md  bmad-agent-bmm-analyst.md  bmad-agent-bmm-architect.md  bmad-agent-bmm-dev.md  bmad-agent-bmm-pm.md  bmad-agent-bmm-qa.md  bmad-agent-bmm-quick-flow-solo-dev.md  bmad-agent-bmm-sm.md  bmad-agent-bmm-tech-writer.md  bmad-agent-bmm-ux-designer.md  bmad-bmm-check-implementation-readiness.md  bmad-bmm-code-review.md  bmad-bmm-correct-course.md  bmad-bmm-create-architecture.md  bmad-bmm-create-epics-and-stories.md  bmad-bmm-create-prd.md  bmad-bmm-create-product-brief.md  bmad-bmm-create-story.md  bmad-bmm-create-ux-design.md  bmad-bmm-dev-story.md  bmad-bmm-document-project.md  bmad-bmm-domain-research.md  bmad-bmm-edit-prd.md  bmad-bmm-generate-project-context.md  bmad-bmm-market-research.md  bmad-bmm-qa-generate-e2e-tests.md  bmad-bmm-quick-dev.md  bmad-bmm-quick-spec.md  bmad-bmm-retrospective.md  bmad-bmm-sprint-planning.md  bmad-bmm-sprint-status.md  bmad-bmm-technical-research.md  bmad-bmm-validate-prd.md  bmad-brainstorming.md  bmad-editorial-review-prose.md  bmad-editorial-review-structure.md  bmad-help.md  bmad-index-docs.md  bmad-party-mode.md  bmad-review-adversarial-general.md  (+1 more)
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-02-27.md
_bmad-output/implementation-artifacts/: 1-1-project-structure-setup.md  1-2-logging-system-implementation.md  1-3-log-auto-cleanup.md  1-4-configuration-manager-implementation.md  1-5-account-password-encryption.md  2-1-user-interface-definition.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-03-02.md  prd.md  product-brief-RedDemonScript-2026-02-27.md  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: iflow.yaml
_bmad/_memory/: config.yaml
_bmad/_memory/tech-writer-sidecar/: documentation-standards.md
_bmad/bmm/: config.yaml
_bmad/bmm/agents/: analyst.md  architect.md  dev.md  pm.md  qa.md  quick-flow-solo-dev.md  sm.md  ux-designer.md
_bmad/bmm/agents/tech-writer/: tech-writer.md
_bmad/bmm/data/: project-context-template.md
_bmad/bmm/workflows/1-analysis/create-product-brief/: product-brief.template.md  workflow.md
_bmad/bmm/workflows/1-analysis/research/: research.template.md  workflow-domain-research.md  workflow-market-research.md  workflow-technical-research.md
_bmad/bmm/workflows/2-plan-workflows/create-prd/: workflow-create-prd.md  workflow-edit-prd.md  workflow-validate-prd.md
_bmad/bmm/workflows/2-plan-workflows/create-ux-design/: ux-design-template.md  workflow.md
_bmad/bmm/workflows/3-solutioning/check-implementation-readiness/: workflow.md
_bmad/bmm/workflows/3-solutioning/create-architecture/: architecture-decision-template.md  workflow.md
_bmad/bmm/workflows/3-solutioning/create-epics-and-stories/: workflow.md
_bmad/bmm/workflows/4-implementation/code-review/: checklist.md
_bmad/bmm/workflows/4-implementation/correct-course/: checklist.md  instructions.md
_bmad/bmm/workflows/4-implementation/create-story/: checklist.md  template.md
_bmad/bmm/workflows/4-implementation/dev-story/: checklist.md
_bmad/bmm/workflows/4-implementation/retrospective/: instructions.md
_bmad/bmm/workflows/4-implementation/sprint-planning/: checklist.md  instructions.md
_bmad/bmm/workflows/4-implementation/sprint-status/: instructions.md
_bmad/bmm/workflows/bmad-quick-flow/quick-dev/: workflow.md
_bmad/bmm/workflows/bmad-quick-flow/quick-spec/: tech-spec-template.md  workflow.md
_bmad/bmm/workflows/document-project/: checklist.md  instructions.md
_bmad/bmm/workflows/document-project/templates/: deep-dive-template.md  index-template.md  project-overview-template.md  source-tree-template.md
_bmad/bmm/workflows/document-project/workflows/: deep-dive-instructions.md  full-scan-instructions.md
_bmad/bmm/workflows/generate-project-context/: project-context-template.md  workflow.md
_bmad/bmm/workflows/generate-project-context/steps/: step-01-discover.md  step-02-generate.md  step-03-complete.md
_bmad/bmm/workflows/qa-generate-e2e-tests/: checklist.md  instructions.md
_bmad/core/: config.yaml
_bmad/core/agents/: bmad-master.md
_bmad/core/tasks/: help.md
_bmad/core/workflows/brainstorming/: template.md  workflow.md
_bmad/core/workflows/brainstorming/steps/: step-01-session-setup.md  step-01b-continue.md  step-02a-user-selected.md  step-02b-ai-recommended.md  step-02c-random-selection.md  step-02d-progressive-flow.md  step-03-technique-execution.md  step-04-idea-organization.md
_bmad/core/workflows/party-mode/: workflow.md
_bmad/core/workflows/party-mode/steps/: step-01-agent-loading.md  step-02-discussion-orchestration.md  step-03-graceful-exit.md
config/: config.example.json
qml/components/: .gitkeep
src/account/: .gitkeep  AccountInfo.h  AccountManager.cpp  AccountManager.h
src/core/: .gitkeep  ConfigManager.cpp  ConfigManager.h  LogManager.cpp  LogManager.h  MonitorThread.cpp  MonitorThread.h  ScriptController.cpp  ScriptController.h  ScriptThread.cpp  ScriptThread.h  TimerThread.cpp  TimerThread.h
src/helpers/: .gitkeep  DpapiHelper.cpp  DpapiHelper.h  ImageHelper.cpp  ImageHelper.h  InputHelper.cpp  InputHelper.h
src/interfaces/: .gitkeep  IDungeonEntry.h  IDungeonRunner.h  IGameLauncher.h
src/ui/: .gitkeep
tests/: CMakeLists.txt  test_config_manager.cpp
(+107 files in other folders)
